En fait, ce hack est toujours nécessaire pour contourner le même bug dans IE. Le bug est visible sur les cartes auto-générées au niveau du labeld es hôtes qui est aligné à gauche de l'image, au lieu d'être centré.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@6191 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigimap/css/non-ie7.css
+++ b/src/vigilo/themes/public/vigimap/css/non-ie7.css
@@ -1,1 +1,3 @@
-
+#map div.serviceelement div.status {
+    margin: 1px auto;
+}
